# Copyright (C) 2026-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../accessibility_manager_service.gni")

blinking_reminder_path = "./"

config("blinking_reminder_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "inc",
    "../aams/include",
    "../../common/log/include",
    "../../interfaces/innerkits/common/include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility\"",
    "AAMS_LOG_DOMAIN = 0xD001D00",
  ]

  if (build_variant == "user") {
    defines += [ "RELEASE_VERSION" ]
  }

  defines += accessibility_default_defines
}

blinking_reminder_files = [
  "${blinking_reminder_path}/src/accessible_blinking_reminder_manager.cpp",
  "${blinking_reminder_path}/src/export_api.cpp",
]

ohos_shared_library("accessibleBlinking") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-ffunction-sections",
    "-fdata-sections",
  ]

  ldflags = [
    "-Wl,--gc-sections",
  ]

  sources = blinking_reminder_files

  configs = [
    ":blinking_reminder_config",
    "../../resources/config/build:coverage_flags",
  ]

  deps = [
    "../../interfaces/innerkits/common:accessibility_common",
  ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "power_manager:powermgr_client",
  ]

  if (accessibility_camera_support) {
    external_deps += [
      "camera_framework:camera_framework",
      "graphic_surface:surface",
    ]
  }

  if (accessibility_screenlock_manager) {
    external_deps += [ "screenlock_mgr:screenlock_client" ]
  }

  if (accessibility_sensor_support) {
    external_deps += [ "sensor:sensor_interface_native" ]
  }

  if (accessibility_feature_display_manager) {
    external_deps += [ "display_manager:displaymgr" ]
  }

  install_enable = true

  subsystem_name = "barrierfree"
  part_name = "accessibility"
}

################################################################################
group("blinking_reminder_test") {
  testonly = true
  deps = [
    "test:blinking_reminder_test",
  ]
}
