# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//base/accessibility/services/test/aamstestmock.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
#1. intent(c++) get/set test without transport

config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
    cflags_cc = [ "-fexceptions" ]
  }

  include_dirs = aams_mock_include_dirs
  include_dirs += [
    "mock/aafwk/include",
    "mock/powermanager/include",
    "../aams/test/mock/",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//base/accessibility/services/aams/include",
    "//base/accessibility/frameworks/asacfwk/include",
    "//base/accessibility/frameworks/aafwk/include",
    "//base/accessibility/interfaces/innerkits/asacfwk/include",
    "//base/accessibility/util/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//base/notification/ces_standard/interfaces/innerkits/native/include",
    "//base/accessibility/dummyData",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    "//base/accessibility/common/log/include",
    "//utils/system/safwk/native/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//utils/native/base/include",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/include",
    "//base/global/resmgr_standard/interfaces/innerkits/include",

    #"//foundation/distributedschedule/samgr/services/samgr/native/include",
    #"//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/common/log/include",
    "//third_party/jsoncpp/include/json",
    "//third_party/jsoncpp/include",
    "//foundation/aafwk/standard/frameworks/kits/appkit/native/app/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager/include/appmgr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include/",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/windowmanager/interfaces/innerkits/dm",
    "//foundation",
    "//foundation/multimedia/image_standard/interfaces/kits/native/include",
    "//foundation/windowmanager/utils/include",
    "//foundation/windowmanager/dm/include",
    "//foundation/graphic/standard/rosen/modules/render_service_base/include",
    "//base/accessibility/interfaces/innerkits/aafwk/include",
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD005205",
  ]
}

MockPowerManagerSrc = [ "mock/powermanager/src/mock_power_mgr_client.cpp" ]

MockAafwkSrc = [ "mock/aafwk/src/mock_ability_manager_client.cpp" ]

MockDistributedscheduleSrc = [
  #"mock/distributedschedule/src/iservice_registry.cpp",
  #"mock/distributedschedule/src/system_ability_manager.cpp",
]

################################################################################
ohos_moduletest("aams_accessibility_touch_guider_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_event_transmission.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/frameworks/asacfwk/src/accessibility_ability_info.cpp",
    "//base/accessibility/frameworks/asacfwk/src/accessibility_event_info.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_operator_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_manager_service_stub_mock.cpp",
    "//base/accessibility/services/test/mock/gesture_simulation_mock.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "//third_party/jsoncpp/src/lib_json/json_writer.cpp",
    "moduletest/aamstest/aams_accessibility_touch_guider_test/aams_accessibility_touch_guider_test.cpp",
    "moduletest/aamstest/aams_accessibility_touch_guider_test/mock/accessibility_window_info_mock.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_event_transmission.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/frameworks/asacfwk/src/accessibility_ability_info.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_operator_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_manager_service_stub_mock.cpp",
    "//base/accessibility/services/test/mock/gesture_simulation_mock.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "//third_party/jsoncpp/src/lib_json/json_writer.cpp",
    "moduletest/aamstest/aams_accessibility_touchEvent_injector_test/aams_accessibility_touchEvent_injector_test.cpp",
    "moduletest/aamstest/aams_accessibility_touchEvent_injector_test/mock/accessibility_window_info_mock.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/accessibility/frameworks/aafwk:accessibleability",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
ohos_moduletest("aams_accessible_ability_channel_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/frameworks/asacfwk/src/accessibility_ability_info.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_transmission_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_operator_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_window_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_manager_service_stub_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_data_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_manager_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_subscribe_info_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_subscriber_mock.cpp",

    #"//base/accessibility/services/test/mock/mock_system_ability_manager_stub.cpp",
    "//base/accessibility/services/test/mock/common_event_support_mock.cpp",
    "//base/accessibility/services/test/mock/gesture_simulation_mock.cpp",
    "//base/accessibility/services/test/mock/matching_skill_mock.cpp",

    #"//base/accessibility/services/test/mock/system_ability_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/services/test/mock/mock_window_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "//third_party/jsoncpp/src/lib_json/json_writer.cpp",
    "moduletest/aamstest/aams_accessible_ability_channel_test/aams_accessible_ability_channel_test.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",

    #"//foundation/distributedschedule/samgr/interfaces/innerkits/common:samgr_common",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
ohos_moduletest("aams_server_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "../aams/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "../aams/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "../aams/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "../aams/test/mock/accessibility_element_operator_stub_mock.cpp",
    "../aams/test/mock/accessibility_event_transmission_mock.cpp",
    "../aams/test/mock/accessibility_info_mock.cpp",
    "../aams/test/mock/accessibility_operator_mock.cpp",
    "../aams/test/mock/accessibility_window_info_mock.cpp",
    "../aams/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "../aams/test/mock/accessible_ability_channel_stub_mock.cpp",
    "../aams/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "../aams/test/mock/accessible_ability_client_stub_mock.cpp",
    "../aams/test/mock/common_event_data_mock.cpp",
    "../aams/test/mock/common_event_manager_mock.cpp",
    "../aams/test/mock/common_event_subscribe_info_mock.cpp",
    "../aams/test/mock/common_event_subscriber_mock.cpp",

    #"../aams/test/mock/mock_system_ability_manager_stub.cpp",
    "../aams/test/mock/common_event_support_mock.cpp",
    "../aams/test/mock/gesture_simulation_mock.cpp",
    "../aams/test/mock/matching_skill_mock.cpp",

    #"../aams/test/mock/system_ability_manager.cpp",
    "../aams/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "//third_party/jsoncpp/src/lib_json/json_writer.cpp",
    "mock/accessibility_ability_info_mock.cpp",
    "mock/accessibility_event_info_mock.cpp",
    "mock/accessible_ability_client_proxy_mock.cpp",
    "mock/accessible_ability_manager_service_state_proxy_mock.cpp",
    "mock/accessible_ability_manager_service_state_stub_mock.cpp",
    "mock/accessible_ability_manager_service_stub_mock.cpp",
    "moduletest/aamstest/aams_server_test/aams_server_test.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",

    #"//foundation/distributedschedule/samgr/interfaces/innerkits/common:samgr_common",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
ohos_moduletest("aams_accessibility_keyevent_filter_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_event_transmission.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/frameworks/asacfwk/src/accessibility_ability_info.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_operator_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_window_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_manager_service_stub_mock.cpp",
    "//base/accessibility/services/test/mock/gesture_simulation_mock.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "//third_party/jsoncpp/src/lib_json/json_writer.cpp",
    "moduletest/aamstest/aams_accessibility_keyevent_filter_test/aams_accessibility_keyevent_filter_test.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
ohos_moduletest("aams_common_event_registry_test") {
  module_out_path = module_output_path

  sources = [
    "../aams/src/accessibility_account_data.cpp",
    "../aams/src/accessibility_common_event_registry.cpp",
    "../aams/src/accessibility_display_manager.cpp",
    "../aams/src/accessibility_gesture_recognizer.cpp",
    "../aams/src/accessibility_input_interceptor.cpp",
    "../aams/src/accessibility_interaction_bridge.cpp",
    "../aams/src/accessibility_keyevent_filter.cpp",
    "../aams/src/accessibility_touchEvent_injector.cpp",
    "../aams/src/accessibility_touch_guider.cpp",
    "../aams/src/accessibility_window_connection.cpp",
    "../aams/src/accessibility_window_manager.cpp",
    "../aams/src/accessibility_zoom_gesture.cpp",
    "../aams/src/accessibility_zoom_handler.cpp",
    "../aams/src/accessible_ability_connection.cpp",
    "../aams/src/accessible_ability_manager_service.cpp",
    "../aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/services/test/mock/accessibility_ability_info_mock.cpp",

    #"//base/accessibility/services/test/mock/ability_manager_client_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_caption_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_callback_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_element_operator_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_event_transmission_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_operator_mock.cpp",
    "//base/accessibility/services/test/mock/accessibility_window_info_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_channel_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_proxy_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_impl_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_client_stub_mock.cpp",
    "//base/accessibility/services/test/mock/accessible_ability_manager_service_stub_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_data_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_manager_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_subscribe_info_mock.cpp",
    "//base/accessibility/services/test/mock/common_event_subscriber_mock.cpp",

    #"//base/accessibility/services/test/mock/mock_system_ability_manager_stub.cpp",
    "//base/accessibility/services/test/mock/common_event_support_mock.cpp",
    "//base/accessibility/services/test/mock/gesture_simulation_mock.cpp",
    "//base/accessibility/services/test/mock/matching_skill_mock.cpp",

    #"//base/accessibility/services/test/mock/system_ability_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_manager.cpp",
    "//base/accessibility/services/test/mock/mock_bundle_mgr_proxy.cpp",
    "//base/accessibility/services/test/mock/mock_display.cpp",
    "//base/accessibility/services/test/mock/mock_display_manager.cpp",
    "//base/accessibility/util/src/json_utils.cpp",
    "moduletest/aamstest/aams_common_event_registry_test/aams_common_event_registry_test.cpp",
  ]

  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src
  sources += MockPowerManagerSrc
  sources += MockAafwkSrc
  sources += MockDistributedscheduleSrc

  configs = [ ":module_private_config" ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",

    #"//foundation/distributedschedule/samgr/interfaces/innerkits/common:samgr_common",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account_standard:os_account_innerkits",
  ]

  public_deps = [
    "//foundation/graphic/standard:libwmclient",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/wm:libwm",
  ]
}

################################################################################
group("moduletest") {
  testonly = true
  deps = []

  if (is_phone_product) {
    deps += [
      ":aams_accessibility_keyevent_filter_test",
      ":aams_accessibility_touchEvent_injector_test",
      ":aams_accessibility_touch_guider_test",
      ":aams_accessible_ability_channel_test",
      ":aams_common_event_registry_test",
      ":aams_server_test",
    ]
  }
}
